@@ -2,7 +2,7 @@ Source: packet-manipulator
 Section: net
 Priority: optional
 Maintainer: Ubuntu MOTU Developers <ubuntu-motu@lists.ubuntu.com>
-Build-Depends: debhelper (>= 5), python, cdbs (>= 0.4.49), gcc, libgtk2.0-bin, python-sphinx
+Build-Depends: debhelper (>= 5), python, cdbs (>= 0.4.49), gcc, python-dev, libgtk2.0-bin, python-sphinx
 Build-Depends-Indep: python-central (>= 0.6.1)
 XSBC-Original-Maintainer: Francesco Piccinno <stack.box@gmail.com>
 XS-Python-Version: current
@@ -10,12 +10,11 @@ Standards-Version: 3.8.0
 Homepage: http://manipulator.umitproject.org
 
 Package: packet-manipulator
-Architecture: all
 Depends: ${python:Depends}, python-gtk2, python-gobject
 XB-Python-Version: ${python:Versions}
 Recommends: python-psyco,  python-gnome2-extras, python-webkit, python-gtkhex
 Description: PacketManipulator
-   is a graphical frontend really useful foradvanced users and easy to use
+   is a graphical frontend really useful for advanced users and easy to use
    for newbies. With PacketManipulator, network admin can forge custom
    packets and send them over the wire to analyze the network, sniff on a
    selected interface or simply edit a pcap file for further replay.
